internalAMS/force-app/main/default/objects/Asset_Assignment__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.Asset_Status__c</field>
            <operation>equals</operation>
            <value>Not Assigned</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset Assignments</relationshipLabel>
    <relationshipName>Asset_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>