internalAMS/force-app/main/default/objects/Asset_Assignment__c/fields/Asset_Returned__c.field-meta.xml
<CustomField>
    <fullName>Asset_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Returned</label>
    <type>Checkbox</type>
</CustomField>