internalAMS/force-app/main/default/objects/Asset_Assignment__c/fields/Assgined_Date__c.field-meta.xml
<CustomField>
    <fullName>Assgined_Date__c</fullName>
    <label>Assgined Date</label>
    <type>Date</type>
</CustomField>