internalAMS/force-app/main/default/objects/Asset_Assignment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Asset Assignments</relationshipLabel>
    <relationshipName>Asset_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>