internalAMS/force-app/main/default/objects/Asset_Assignment__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <formula>Employee__r.Department_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Name</label>
    <type>Text</type>
</CustomField>