internalAMS/force-app/main/default/objects/Asset_Assignment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Assignments</relationshipLabel>
    <relationshipName>Asset_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>