internalAMS/force-app/main/default/objects/Asset_Assignment__c/fields/Is_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This checkbox shows that this asset is assigned.</inlineHelpText>
    <label>Is Assigned</label>
    <type>Checkbox</type>
</CustomField>