internalAMS/force-app/main/default/objects/Asset_Assignment__c/recordTypes/Employee_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Employee_Record_type</fullName>
    <active>true</active>
    <label>Employee</label>
</RecordType>