internalAMS/force-app/main/default/objects/Asset_Assignment__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Assgined_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Assgined_Date__c</errorDisplayField>
    <errorMessage>Assigned Date cannot be a previous date</errorMessage>
</ValidationRule>